--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -38,15 +38,10 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	<!-- CoFlo's main support script. -->
 	<script src="js/coflo.resizer.js"></script>
 	<!-- <script src="js/coflo/coflo-report.js"></script> -->
-	<!-- 
-	@todo Put this or something like it back when we use local copies of these libraries.
 	<script src="js/jquery-1.8.2.js"></script>
-	<script src="js/jquery-ui-1.9.0.custom.min.js"></script>
-	-->
-	<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
-	<script src="http://code.jquery.com/ui/1.9.1/jquery-ui.js"></script>
+	<script src="js/jquery-ui.js"></script>
 	<script src="js/jquery.layout-latest.js"></script>
-	<script src="js/jstree_pre1.0_fix_1/jquery.jstree.js"></script>
+	<script src="js/jquery.jstree.js"></script>
 	<script>
 	// The layout object.
 	var mainLayout;
