--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -17,7 +17,7 @@ You should have received a copy of the GNU General Public License along with
 CoFlo.  If not, see http://www.gnu.org/licenses/.
 -->
 <head>
-	<meta charset="utf-8">
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	
 	<!-- The date the report was generated (must be GMT in RFC 1123 format). -->
 	<meta http-equiv="date" content="Mon, 24 Jun 2012 12:34:56 GMT">
@@ -64,7 +64,14 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 		var active_tab_index = center_pane_tabs.tabs("option", "active");
 		var active_tab_panel = center_pane_tabs.find(".ui-tabs-panel").eq(active_tab_index);
 		
-		fitToContainer(svg_placeholder, active_tab_panel);
+		if(svg_placeholder && active_tab_panel)
+		{
+			fitToContainer(svg_placeholder, active_tab_panel);
+		}
+		else
+		{
+			console.warn("Can\'t resize, bad params on object load:", svg_placeholder, active_tab_panel);	
+		}
 		
 		console.groupEnd();
 	};
@@ -91,12 +98,18 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 
 		/// Initialize the tabs.
 		center_pane_tabs = $( "#tabs" ).tabs({
-			activate: onTabsActivate,
+			//activate: onTabsActivate,
 		});
 		svg_placeholder = $("#tabs-1 .svg-cfg");
 		
 		// Set up the nav pane's tree control.
 		var nav_tree = $("#nav_tree_id").jstree({
+			/**
+			 * Configuration for the jsTree types plugin.
+			 */
+			// This defaults to "rel", which makes some sense, but is not a valid attribute for <li> elements.
+			// We'll use "data-nav-tree-node-type" instead.
+			type_attr: "data-nav-tree-node-type",
 			"types" : {
 				"valid_children" : [ "source_file" ],
 				"types" : {
@@ -104,6 +117,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 						"valid_children" : [ "function" ]
 					},
 				"function" : {
+						"max_children": 0, 
 						"valid_children" : [ "none" ]
 					},
 				"default" : {
@@ -151,6 +165,8 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
             $(svg_placeholder).attr("data", selected_function_svg_url);
             // "src" for iframes.
             //$(svg_placeholder).attr("src", selected_function_svg_url);
+            // "xlink:href" for <svg>
+            //$(svg_placeholder).attr("xlink:href", selected_function_svg_url);
 
    			            
             // Update the header text of the tab panels.
@@ -244,24 +260,24 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 <div id="nav_tree_id" class="ui-layout-west">
 <ul>
 	<!-- REMOVE_START -->
-	<li id="nav_tree_file_1" class="coflo-nav-tree-file">
+	<li id="nav_tree_file_1" class="coflo-nav-tree-file" data-nav-tree-node-type="source_file">
 		<a href="#">File 1</a>
 		<ul>
-			<li id="nav_tree_2" rel="function">
+			<li id="nav_tree_2" data-nav-tree-node-type="function">
 				<a href="#decode_switches">decode_switches()</a>
 			</li>
-			<li id="nav_tree_3" rel="function">
+			<li id="nav_tree_3" data-nav-tree-node-type="function">
 				<a href="#die">die()</a>
 			</li>
 		</ul>
 	</li>
-	<li id="nav_tree_file_2" class="coflo-nav-tree-file">
+	<li id="nav_tree_file_2" class="coflo-nav-tree-file" data-nav-tree-node-type="source_file">
 		<a href="#">File 2</a>
 		<ul>
-			<li id="nav_tree_5" rel="function">
+			<li id="nav_tree_5" data-nav-tree-node-type="function">
 				<a href="#">Function 3</a>
 			</li>
-			<li id="nav_tree_6" rel="function">
+			<li id="nav_tree_6" data-nav-tree-node-type="function">
 				<a href="#">Function 4</a>
 			</li>
 		</ul>
@@ -283,12 +299,17 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	being considered part of the scrollable area -->
 	<div class="ui-layout-content ui-widget-content ui-corner-bottom">
 		<div id="tabs-1">
-			<!-- Surround the function name with an anchor in an attempt at having reasonable <noscript> nav fallback. -->
-			<!-- <p><a id="decode_switches">decode_switches()</a></p> -->
 			<p id="tab-1-cfg-header-text">Select a function from the navigation list on the left.</p>
-			<!-- data="decode_switches.svg" -->
+			<!-- Note that we purposely leave off the "data=" attribute here.  
+			We'll load that when the user selects something from the nav tree. data="decode_switches.svg" -->
  			<object onload="ResizeSVG();" class="svg-cfg" type="image/svg+xml"></object>
- 			<!-- <iframe onload="ResizeSVG();" class="svg-cfg"></iframe> -->
+ 			<!--
+ 			  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" >
+			    <svg viewBox="0 0 100% 100%">
+			    	<image class="svg-cfg" height="100%" width="100%" overflow="scroll" preserveAspectRatio="xMinYMin slice" xlink:href="decode_switches.svg" />
+			    </svg>
+			  </svg>
+			--> 			
 		</div>
 		<div id="tabs-2">
 			<p id="tab-2-cfg-header-text">Select a function from the navigation list on the left.</p>
