--- a/src/templates/index.template.html
+++ b/src/templates/index.template.html
@@ -46,7 +46,7 @@ CoFlo.  If not, see http://www.gnu.org/licenses/.
 	<script src="js/coflo.resizer.js"></script>
 	<!-- <script src="js/coflo/coflo-report.js"></script> -->
 	<script src="js/jquery-1.8.2.js"></script>
-	<script src="js/jquery-ui.js"></script>
+	<script src="js/jquery-ui-1.9.1.custom.js"></script>
 	<script src="js/jquery.layout-latest.js"></script>
 	<script src="js/jquery.jstree.js"></script>
 	<script>
